--- a/componentForm.ui
+++ b/componentForm.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>addComonentForm</class>
- <widget class="QWidget" name="addComonentForm">
+ <class>comonentForm</class>
+ <widget class="QWidget" name="comonentForm">
   <property name="geometry">
    <rect>
     <x>0</x>
